Updated requirements for EDA

--- a/code/Exploratory_Data_Analysis.ipynb
+++ b/code/Exploratory_Data_Analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What triggered that emotion? Emotion cause extraction in conversational discourse.\n",
+    "Proactive Learning with Emotion Detection in Non-Cooperative Discourse.\n",
     "\n",
-    "Copyright (C) 2021  Rigved Rakshit\n",
+    "Copyright (C) 2022  Rigved Rakshit\n",
     "\n",
     "This program is free software: you can redistribute it and/or modify\n",
     "it under the terms of the GNU Affero General Public License as published\n",
