--- a/code/Exploratory_Data_Analysis_Survey.ipynb
+++ b/code/Exploratory_Data_Analysis_Survey.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "Emotion Detection using Active Learning.\n",
+    "Emotion Detection with Proactive Learning in Non-Cooperative Discourse.\n",
     "\n",
     "Copyright (C) 2022  Rigved Rakshit\n",
     "\n",
