--- a/src/Exploratory_Data_Analysis.ipynb
+++ b/src/Exploratory_Data_Analysis.ipynb
@@ -47,11 +47,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/rr3369/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to /home/user/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /home/rr3369/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /home/user/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/rr3369/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to /home/user/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
