--- a/src/Extract_Survey_Data.ipynb
+++ b/src/Extract_Survey_Data.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Set variables\n",
-    "emotion_annotated_dataset_path = '/home/rigved/Documents/USA/Universities/RIT/Courses/2022/Spring/DSCI_602_Applied_Data_Science_II/Data/CSVs'"
+    "emotion_annotated_dataset_path = '<path to Qualtrics data dump>'"
    ]
   },
   {
@@ -9428,7 +9428,7 @@
    "source": [
     "# Load the associated questions and responses and combine it with the emotion dataset\n",
     "\n",
-    "complete_data_with_duplicates = pd.read_csv('/home/rigved/repos/rit/DSCI-601/subjective_discourse/data/gold/expanded_with_features_annotated_questions_responses_gold.csv')\n",
+    "complete_data_with_duplicates = pd.read_csv('../data/expanded_with_features_annotated_questions_responses_gold.csv')\n",
     "complete_data_without_duplicates = complete_data_with_duplicates.drop_duplicates(subset='qa_index')\n",
     "\n",
     "merged_emotion_annotated_data_list = list()\n",
@@ -9755,7 +9755,7 @@
     "\n",
     "# Save this merged dataframe to disk\n",
     "merged_emotion_annotated_data.to_csv(\n",
-    "    '/home/rigved/Documents/USA/Universities/RIT/Courses/2022/Spring/DSCI_602_Applied_Data_Science_II/Data/emotion_data_annotated_by_humans.csv',\n",
+    "    '../data/emotion_annotated_data.csv',\n",
     "    index=False\n",
     ")"
    ]
